# HexenDB_Rust

./: .gitignore  Cargo.toml  README.md
src/: client.rs  database.rs  main.rs  server.rs  table.rs  user_manager.rs
